project2/test/test_11711111_5.out
Error type 5 at Line 3: unmatching type on both sides of assignment
