project2/test/test_11711111_5.spl
struct node {
    struct node next;
    int key = 1, val = 0.5;
};
